Added Guidelines for Initializing Variables

--- a/source/infographics/index.html
+++ b/source/infographics/index.html
@@ -14,7 +14,7 @@ language: tl
 
 <ul class="card-grid card-grid--img">
   <li>
-    <a href="#!" class="card">
+    <a href="/antares-blog/Guidelines-for-Initializing-Variables/" class="card">
       <img src="index/init-var.png" alt="" />
       <span class="card__header">Guidelines for initializing variables</span>
     </a>
